--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8888
 server.servlet.context-path=/ingaccount
 ## Database Properties
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/ingdb?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url = jdbc:mysql://13.233.106.64/:3306/ingdb?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = inguser1
 spring.datasource.password = H@ckath0n
 ## Hibernate Properties
